feat: Implement JWT authentication, SystemContextHolder refactor, silent token refresh, and frontend adaptations